# agenticai

./: 00_prerequisites.md  01_fastapi_basic.py  02_fastapi_upload_csv.py  03_simple_gemini_chat.py  04_scrape_screener.py  05_langchain_invoke_tool.py  06_message_types.py  07_prompt_templates.py  08_chat_history_store.py  README.md  main.py  pyproject.toml  requirements.txt  sample.py
